[package]
name = "index-set"
version = "0.7.2"
edition = "2021"

[features]
default = []
serialize-serde = ["serde"]
serialize-borsh = ["borsh"]

[dependencies.serde]
optional = true
version = "1"
default-features = false
features = ["alloc", "derive"]

[dependencies.borsh]
optional = true
version = "1.0.0-alpha.4"
default-features = false
features = ["schema", "derive"]
[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "sets"
harness = false
