[package]
name = "index-set"
version = "0.9.0"
edition = "2021"

[features]
default = []
serialize-serde = ["serde"]
serialize-borsh = ["borsh"]

[dependencies.serde]
optional = true
version = "1"
default-features = false
features = ["alloc", "derive"]

[dependencies.borsh]
optional = true
version = "1.2.0"
default-features = false
features = ["unstable__schema", "derive"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "sets"
harness = false
