[package]
name = "index-set"
version = "0.10.0"
edition = "2021"

[features]
default = []
testing = [
    "serialize-serde",
    "serialize-borsh",
]
serialize-serde = ["serde"]
serialize-borsh = ["borsh"]

[dependencies.serde]
optional = true
version = "1"
default-features = false
features = ["alloc", "derive"]

[dependencies.borsh]
optional = true
version = "1.2.0"
default-features = false
features = ["unstable__schema", "derive"]

[dev-dependencies]
criterion = "0.4"
serde_json = "1.0.127"

[[bench]]
name = "sets"
harness = false
